// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id            String    @id @default(uuid()) @db.VarChar(255)
  phone         String    @unique @db.VarChar(255)
  password      String?
  otp           String?   @db.VarChar(6)
  otpUsed       otpStatus @default(UNUSED)
  refresh_token String?
  created_at    DateTime  @default(now())
  todo          Todo[]
  profile       Profile?
}

model Profile {
  id        String     @id @default(uuid()) @db.VarChar(255)
  user_name String
  role      roleStatus @default(USER)
  user_id   String     @unique
  user      User       @relation(fields: [user_id], references: [id])
  image     File[]
}

model File {
  id         String   @id @default(uuid()) @db.VarChar(255)
  name       String
  path       String
  profile_id String
  profile    Profile  @relation(fields: [profile_id], references: [id])
  created_at DateTime @default(now())
  updated_at DateTime @default(now())
}

model Todo {
  id              String         @id @default(uuid()) @db.VarChar(255)
  title           String
  description     String
  complete_status completeStatus @default(UNDONE)
  created_at      DateTime       @default(now())
  updated_at      DateTime       @updatedAt
  user_id         String?
  user            User?          @relation(fields: [user_id], references: [id], onDelete: Cascade, onUpdate: Cascade)
}

enum otpStatus {
  USED
  UNUSED
}

enum completeStatus {
  DONE
  UNDONE
}

enum roleStatus {
  USER
  ADMIN
}
